--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "path": "^0.12.7",
+    "path.join": "^1.0.0",
     "popups": "^1.1.3"
   }
 }
