--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "axios": "^1.6.3",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
+    "colors": "^1.4.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-session": "^2.0.0",
